--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
-.App {
+.centerAlign {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo {
+  width: 149px;
+  height: 92px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.search-box {
+  max-width: 450px;
+  width: 80%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.drawer-icon {
+  text-align: end;
+  position: relative;
+  top: 15px;
+  margin-right: 10px;
+  margin-bottom: -50px;
 }
-
-.App-link {
-  color: #61dafb;
+header {
+  background: #fff;
+  position: fixed;
+  width: 100%;
+  padding-bottom: 5px;
+  padding-top: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+section {
+  background: url("../public/background.jpg") no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+.banner-msg {
+  background-color: rgb(14, 40, 29);
+  color: #fff !important;
+  font-family: Amaranth !important;
+  font-size: 15px !important;
+}
+footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+.css-1qqsdnr-MuiAutocomplete-root .MuiFilledInput-root {
+  padding-top: 10px !important;
+}
+.item {
+  font-size: 18px !important;
+  text-transform: uppercase;
+  font-weight: 900 !important;
+  color: #5e554b !important;
+  font-family: amaranth !important;
+}
+.large-search-position {
+  position: relative;
+  top: 23px;
+  left: -96px;
+}
+.short-search-position {
+  position: relative;
+  top: -17px;
+  margin-bottom: -16px;
+}
+.large-menu-position {
+  position: relative;
+  top: -27px;
+  margin-bottom: -30px;
+}
+.top-banner {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  text-align: end;
+}
+.body-container {
+  height: 75%;
+  position: relative;
+  top: 146px;
+  overflow-y: scroll;
+}
+.card {
+  width: 300px;
+  height: 380px;
+  background: #fff;
+}
+img {
+  max-width: 100%;
+  height: 90%;
+}
+.title {
+  font-size: 25px !important;
+  text-transform: uppercase;
+  font-weight: 900 !important;
+  font-family: amaranth !important;
+  text-align: center;
+  text-decoration: underline;
+}
+.tag {
+  text-align: center;
+}
+.text-color {
+  color: #5e554b !important;
 }
